# lib-fingerprint

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
.config/: nextest.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: check-dependencies.yml  check-dynamic.yml  check-static.yml
docs/dev/: README.md
docs/dev/reference/: cross-compile.md  macos-arch.md  static-binary.md
src/: fingerprint.rs  lib.rs  main.rs  serialize.rs  stream.rs  tests.rs
src/fingerprint/: archive.rs  binary.rs  bytes.rs  jar.rs  text.rs
testdata/: facebook-folly-Version.cpp.stripped
testdata/images/: README.md  bitnami_elasticsearch_7_17_17_debian_11_r4.tar  elasticsearch_7_17_17.tar  hazelcast_managementcenter_5_3_1.tar
tests/it/: code_vsi.rs  jar.rs  main.rs
tests/it/jar/: expect.rs
tests/it/jar/expect/: bitnami_elasticsearch_7_17_17_debian_11_r4.rs  elasticsearch_7_17_17.rs  hazelcast_managementcenter_5_3_1.rs
