[package]
name = "fingerprint"
version = "2.0.0"
edition = "2021"

[features]
default = ["fp-content-serialize-hex"]

# Serializes fingerprint content using hex encoding.
# This is the default encoding since it is what most services expect.
fp-content-serialize-hex = ["hex"]

# Serializes fingerprint content using base64 encoding.
#
# If this is specified along with `fp-content-serialize-hex`,
# the standard serde operations prefer `fp-content-serialize-hex`.
fp-content-serialize-base64 = ["base64"]

# Enable full CI tests.
ci = ["docker-tests"]

# Enable tests which require docker.
#
# In CI, this requires Linux;
# GitHub action runners for macOS and Windows don't have Docker.
docker-tests = []

# Dependency features, auto added.
base64 = ["dep:base64"]
hex = ["dep:hex"]

[dependencies]
getset = "0.1.2"
iter-read = "0.3.1"
serde = { version = "1.0.140", features = ["derive"] }
thiserror = "1.0.31"
sha2 = "0.10.6"
hex = { version = "0.4.3", optional = true }
base64 = { version = "0.22.1", optional = true }
zip = "2.1.2"
strum = { version = "0.26.2", features = ["derive"] }
alphanumeric-sort = "1.5.3"
tap = "1.0.1"
tracing = "0.1.40"

[dev-dependencies]
pretty_assertions = "1.4.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.117"
tar = "0.4.40"
test-log = { version = "0.2.16", features = ["trace"] }
maplit = "1.0.2"
xshell = "0.2.6"
tempfile = "3.10.1"
lazy-regex = "3.1.0"
itertools = "0.13.0"
