[package]
name = "fingerprint"
version = "3.0.3"
edition = "2024"

[features]
default = ["fp-content-serialize-hex"]

# Serializes fingerprint content using hex encoding.
# This is the default encoding since it is what most services expect.
fp-content-serialize-hex = ["hex"]

# Serializes fingerprint content using base64 encoding.
#
# If this is specified along with `fp-content-serialize-hex`,
# the standard serde operations prefer `fp-content-serialize-hex`.
fp-content-serialize-base64 = ["base64"]

# Enable full CI tests.
ci = ["docker-tests"]

# Enable tests which require docker.
#
# In CI, this requires Linux;
# GitHub action runners for macOS and Windows don't have Docker.
docker-tests = []

# Dependency features, auto added.
base64 = ["dep:base64"]
hex = ["dep:hex"]

[dependencies]
getset = "0.1.5"
iter-read = "1.1.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
sha2 = "0.10.9"
hex = { version = "0.4.3", optional = true }
base64 = { version = "0.22.1", optional = true }
zip = "3.0.0"
strum = { version = "0.27.1", features = ["derive"] }
alphanumeric-sort = "1.5.3"
tap = "1.0.1"
tracing = "0.1.41"
sha1 = "0.10.6"

[dev-dependencies]
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
test-log = { version = "0.2.17", features = ["trace"] }
maplit = "1.0.2"
xshell = "0.2.7"
tempfile = "3.20.0"
lazy-regex = "3.4.1"
itertools = "0.14.0"
